fixed background image cropping at bottom

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 body {
     background-image: url(../img/partly-cloudy.png);
-    background-position: center center;
+    background-position: fixed;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
